# lib/Api/DefaultApi.php
@@ -16,7 +16,7 @@
  *
  * The version of the OpenAPI document: 2.0
  * Generated by: https://openapi-generator.tech
- * Generator version: 7.13.0
+ * Generator version: 7.15.0
  */
 
 /**
@@ -633,11 +633,12 @@ class DefaultApi
      *
      * @throws \kruegge82\goexpress\ApiException on non-2xx response or if the response body is not in the expected format
      * @throws \InvalidArgumentException
-     * @return void
+     * @return \kruegge82\goexpress\Model\OrderResponse
      */
     public function orderApiV1UpdateOrderStatusPost($update_status_request, string $contentType = self::contentTypes['orderApiV1UpdateOrderStatusPost'][0])
     {
-        $this->orderApiV1UpdateOrderStatusPostWithHttpInfo($update_status_request, $contentType);
+        list($response) = $this->orderApiV1UpdateOrderStatusPostWithHttpInfo($update_status_request, $contentType);
+        return $response;
     }
 
     /**
@@ -650,7 +651,7 @@ class DefaultApi
      *
      * @throws \kruegge82\goexpress\ApiException on non-2xx response or if the response body is not in the expected format
      * @throws \InvalidArgumentException
-     * @return array of null, HTTP status code, HTTP response headers (array of strings)
+     * @return array of \kruegge82\goexpress\Model\OrderResponse, HTTP status code, HTTP response headers (array of strings)
      */
     public function orderApiV1UpdateOrderStatusPostWithHttpInfo($update_status_request, string $contentType = self::contentTypes['orderApiV1UpdateOrderStatusPost'][0])
     {
@@ -679,9 +680,45 @@ class DefaultApi
             $statusCode = $response->getStatusCode();
 
 
-            return [null, $statusCode, $response->getHeaders()];
+            switch($statusCode) {
+                case 200:
+                    return $this->handleResponseWithDataType(
+                        '\kruegge82\goexpress\Model\OrderResponse',
+                        $request,
+                        $response,
+                    );
+            }
+
+            
+
+            if ($statusCode < 200 || $statusCode > 299) {
+                throw new ApiException(
+                    sprintf(
+                        '[%d] Error connecting to the API (%s)',
+                        $statusCode,
+                        (string) $request->getUri()
+                    ),
+                    $statusCode,
+                    $response->getHeaders(),
+                    (string) $response->getBody()
+                );
+            }
+
+            return $this->handleResponseWithDataType(
+                '\kruegge82\goexpress\Model\OrderResponse',
+                $request,
+                $response,
+            );
         } catch (ApiException $e) {
             switch ($e->getCode()) {
+                case 200:
+                    $data = ObjectSerializer::deserialize(
+                        $e->getResponseBody(),
+                        '\kruegge82\goexpress\Model\OrderResponse',
+                        $e->getResponseHeaders()
+                    );
+                    $e->setResponseObject($data);
+                    throw $e;
             }
         
 
@@ -723,14 +760,27 @@ class DefaultApi
      */
     public function orderApiV1UpdateOrderStatusPostAsyncWithHttpInfo($update_status_request, string $contentType = self::contentTypes['orderApiV1UpdateOrderStatusPost'][0])
     {
-        $returnType = '';
+        $returnType = '\kruegge82\goexpress\Model\OrderResponse';
         $request = $this->orderApiV1UpdateOrderStatusPostRequest($update_status_request, $contentType);
 
         return $this->client
             ->sendAsync($request, $this->createHttpClientOption())
             ->then(
                 function ($response) use ($returnType) {
-                    return [null, $response->getStatusCode(), $response->getHeaders()];
+                    if ($returnType === '\SplFileObject') {
+                        $content = $response->getBody(); //stream goes to serializer
+                    } else {
+                        $content = (string) $response->getBody();
+                        if ($returnType !== 'string') {
+                            $content = json_decode($content);
+                        }
+                    }
+
+                    return [
+                        ObjectSerializer::deserialize($content, $returnType, []),
+                        $response->getStatusCode(),
+                        $response->getHeaders()
+                    ];
                 },
                 function ($exception) {
                     $response = $exception->getResponse();
@@ -781,7 +831,7 @@ class DefaultApi
 
 
         $headers = $this->headerSelector->selectHeaders(
-            [],
+            ['application/json', ],
             $contentType,
             $multipart
         );
