# lib/Model/Shipment.php
@@ -17,7 +17,7 @@
  *
  * The version of the OpenAPI document: 2.0
  * Generated by: https://openapi-generator.tech
- * Generator version: 7.13.0
+ * Generator version: 7.15.0
  */
 
 /**
@@ -65,6 +65,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         'weight' => 'string',
         'content' => 'string',
         'customer_reference' => 'string',
+        'cost_center' => 'string',
         'self_pickup' => 'string',
         'self_delivery' => 'string',
         'dimensions' => 'string',
@@ -95,6 +96,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         'weight' => null,
         'content' => null,
         'customer_reference' => null,
+        'cost_center' => null,
         'self_pickup' => null,
         'self_delivery' => null,
         'dimensions' => null,
@@ -123,6 +125,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         'weight' => false,
         'content' => false,
         'customer_reference' => false,
+        'cost_center' => false,
         'self_pickup' => false,
         'self_delivery' => false,
         'dimensions' => false,
@@ -231,6 +234,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         'weight' => 'weight',
         'content' => 'content',
         'customer_reference' => 'customerReference',
+        'cost_center' => 'costCenter',
         'self_pickup' => 'selfPickup',
         'self_delivery' => 'selfDelivery',
         'dimensions' => 'dimensions',
@@ -259,6 +263,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         'weight' => 'setWeight',
         'content' => 'setContent',
         'customer_reference' => 'setCustomerReference',
+        'cost_center' => 'setCostCenter',
         'self_pickup' => 'setSelfPickup',
         'self_delivery' => 'setSelfDelivery',
         'dimensions' => 'setDimensions',
@@ -287,6 +292,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         'weight' => 'getWeight',
         'content' => 'getContent',
         'customer_reference' => 'getCustomerReference',
+        'cost_center' => 'getCostCenter',
         'self_pickup' => 'getSelfPickup',
         'self_delivery' => 'getSelfDelivery',
         'dimensions' => 'getDimensions',
@@ -502,6 +508,7 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
         $this->setIfExists('weight', $data ?? [], null);
         $this->setIfExists('content', $data ?? [], null);
         $this->setIfExists('customer_reference', $data ?? [], null);
+        $this->setIfExists('cost_center', $data ?? [], null);
         $this->setIfExists('self_pickup', $data ?? [], null);
         $this->setIfExists('self_delivery', $data ?? [], null);
         $this->setIfExists('dimensions', $data ?? [], null);
@@ -856,6 +863,33 @@ class Shipment implements ModelInterface, ArrayAccess, \JsonSerializable
             throw new \InvalidArgumentException('non-nullable customer_reference cannot be null');
         }
         $this->container['customer_reference'] = $customer_reference;
+
+        return $this;
+    }
+
+    /**
+     * Gets cost_center
+     *
+     * @return string|null
+     */
+    public function getCostCenter()
+    {
+        return $this->container['cost_center'];
+    }
+
+    /**
+     * Sets cost_center
+     *
+     * @param string|null $cost_center cost_center
+     *
+     * @return self
+     */
+    public function setCostCenter($cost_center)
+    {
+        if (is_null($cost_center)) {
+            throw new \InvalidArgumentException('non-nullable cost_center cannot be null');
+        }
+        $this->container['cost_center'] = $cost_center;
 
         return $this;
     }
