# lib/Model/UpdateStatusRequest.php
@@ -17,7 +17,7 @@
  *
  * The version of the OpenAPI document: 2.0
  * Generated by: https://openapi-generator.tech
- * Generator version: 7.13.0
+ * Generator version: 7.15.0
  */
 
 /**
@@ -61,7 +61,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         'responsible_station' => 'string',
         'customer_id' => 'string',
         'hwb_number' => 'string',
-        'shipment' => '\kruegge82\goexpress\Model\UpdateStatusRequestShipment',
+        'order_status' => 'string',
         'label' => 'string'
     ];
 
@@ -76,7 +76,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         'responsible_station' => null,
         'customer_id' => null,
         'hwb_number' => null,
-        'shipment' => null,
+        'order_status' => null,
         'label' => null
     ];
 
@@ -89,7 +89,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         'responsible_station' => false,
         'customer_id' => false,
         'hwb_number' => false,
-        'shipment' => false,
+        'order_status' => false,
         'label' => false
     ];
 
@@ -182,7 +182,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         'responsible_station' => 'responsibleStation',
         'customer_id' => 'customerId',
         'hwb_number' => 'hwbNumber',
-        'shipment' => 'shipment',
+        'order_status' => 'orderStatus',
         'label' => 'label'
     ];
 
@@ -195,7 +195,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         'responsible_station' => 'setResponsibleStation',
         'customer_id' => 'setCustomerId',
         'hwb_number' => 'setHwbNumber',
-        'shipment' => 'setShipment',
+        'order_status' => 'setOrderStatus',
         'label' => 'setLabel'
     ];
 
@@ -208,7 +208,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         'responsible_station' => 'getResponsibleStation',
         'customer_id' => 'getCustomerId',
         'hwb_number' => 'getHwbNumber',
-        'shipment' => 'getShipment',
+        'order_status' => 'getOrderStatus',
         'label' => 'getLabel'
     ];
 
@@ -253,10 +253,25 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         return self::$openAPIModelName;
     }
 
+    public const ORDER_STATUS_RELEASED = 'Released';
+    public const ORDER_STATUS_CANCELLED = 'Cancelled';
     public const LABEL__1 = '1';
     public const LABEL__2 = '2';
     public const LABEL__4 = '4';
     public const LABEL__5 = '5';
+
+    /**
+     * Gets allowable values of the enum
+     *
+     * @return string[]
+     */
+    public function getOrderStatusAllowableValues()
+    {
+        return [
+            self::ORDER_STATUS_RELEASED,
+            self::ORDER_STATUS_CANCELLED,
+        ];
+    }
 
     /**
      * Gets allowable values of the enum
@@ -291,7 +306,7 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
         $this->setIfExists('responsible_station', $data ?? [], null);
         $this->setIfExists('customer_id', $data ?? [], null);
         $this->setIfExists('hwb_number', $data ?? [], null);
-        $this->setIfExists('shipment', $data ?? [], null);
+        $this->setIfExists('order_status', $data ?? [], null);
         $this->setIfExists('label', $data ?? [], null);
     }
 
@@ -321,6 +336,15 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
     public function listInvalidProperties()
     {
         $invalidProperties = [];
+
+        $allowedValues = $this->getOrderStatusAllowableValues();
+        if (!is_null($this->container['order_status']) && !in_array($this->container['order_status'], $allowedValues, true)) {
+            $invalidProperties[] = sprintf(
+                "invalid value '%s' for 'order_status', must be one of '%s'",
+                $this->container['order_status'],
+                implode("', '", $allowedValues)
+            );
+        }
 
         $allowedValues = $this->getLabelAllowableValues();
         if (!is_null($this->container['label']) && !in_array($this->container['label'], $allowedValues, true)) {
@@ -428,28 +452,38 @@ class UpdateStatusRequest implements ModelInterface, ArrayAccess, \JsonSerializa
     }
 
     /**
-     * Gets shipment
+     * Gets order_status
      *
-     * @return \kruegge82\goexpress\Model\UpdateStatusRequestShipment|null
+     * @return string|null
      */
-    public function getShipment()
+    public function getOrderStatus()
     {
-        return $this->container['shipment'];
+        return $this->container['order_status'];
     }
 
     /**
-     * Sets shipment
+     * Sets order_status
      *
-     * @param \kruegge82\goexpress\Model\UpdateStatusRequestShipment|null $shipment shipment
+     * @param string|null $order_status order_status
      *
      * @return self
      */
-    public function setShipment($shipment)
+    public function setOrderStatus($order_status)
     {
-        if (is_null($shipment)) {
-            throw new \InvalidArgumentException('non-nullable shipment cannot be null');
+        if (is_null($order_status)) {
+            throw new \InvalidArgumentException('non-nullable order_status cannot be null');
         }
-        $this->container['shipment'] = $shipment;
+        $allowedValues = $this->getOrderStatusAllowableValues();
+        if (!in_array($order_status, $allowedValues, true)) {
+            throw new \InvalidArgumentException(
+                sprintf(
+                    "Invalid value '%s' for 'order_status', must be one of '%s'",
+                    $order_status,
+                    implode("', '", $allowedValues)
+                )
+            );
+        }
+        $this->container['order_status'] = $order_status;
 
         return $this;
     }
