# openapi_go_order_label.json
@@ -62,7 +62,14 @@
         },
         "responses": {
           "200": {
-            "description": "Status updated successfully"
+            "description": "Status updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrderResponse"
+                }
+              }
+            }
           }
         },
         "security": [
@@ -195,6 +202,9 @@
             "type": "string"
           },
           "customerReference": {
+            "type": "string"
+          },
+          "costCenter": {
             "type": "string"
           },
           "selfPickup": {
@@ -439,17 +449,12 @@
           "hwbNumber": {
             "type": "string"
           },
-          "shipment": {
-            "type": "object",
-            "properties": {
-              "orderStatus": {
-                "type": "string",
-                "enum": [
-                  "Released",
-                  "Cancelled"
-                ]
-              }
-            }
+          "orderStatus": {
+            "type": "string",
+            "enum": [
+              "Released",
+              "Cancelled"
+            ]
           },
           "label": {
             "type": "string",
